tests/baselines/reference/assignmentCompatability43.errors.txt
tests/cases/compiler/assignmentCompatability43.ts(9,1): error TS2322: Type 'interfaceWithPublicAndOptional<number, string>' is not assignable to type 'interfaceTwo<number, string>'.
  Property 'two' is optional in type 'interfaceWithPublicAndOptional<number, string>' but required in type 'interfaceTwo<number, string>'.


==== tests/cases/compiler/assignmentCompatability43.ts (1 errors) ====
    module __test1__ {
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
        export                   interface interfaceTwo<T,U> { one: T; two: U; };   var obj2: interfaceTwo<number,string> = { one: 1, two: "a" };;
        export var __val__obj2 = obj2;
    }
    __test2__.__val__obj2 = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{|interfaceWithPublicAndOptional|0|}<number, string>' is not assignable to type '{|interfaceTwo|1|}<number, string>'.
!!! error TS2322:   Property 'two' is optional in type 'interfaceWithPublicAndOptional<number, string>' but required in type 'interfaceTwo<number, string>'.
!!! annotated symbol 0 tests/cases/compiler/assignmentCompatability43.ts:2:22
!!! annotated symbol 1 tests/cases/compiler/assignmentCompatability43.ts:6:40